# MCPress

./: .env.example  .gitignore  DEPLOYMENT.md  README.md
.cursor/plans/: ai_agent_mcp_chat_b19b9fc3.plan.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: __init__.py  articles.py
backend/app/database/: connection.py
backend/app/models/: article.py  database.py
backend/app/services/: embedder.py  extractor.py  storage.py
backend/app/store/: __init__.py  chroma_store.py
backend/data/chroma/: chroma.sqlite3
backend/scripts/: check_chroma.py  populate_articles.py
docs/deprecated-supabase-migrations/: 001_create_schema.sql  002_create_match_embeddings_function.sql
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/portal/: page.tsx
frontend/src/components/chat/: ChatInterface.tsx  ToolResult.tsx
frontend/src/components/portal/: AddArticleForm.tsx  ArticleCard.tsx  ArticlePortal.tsx  OnboardingFlow.tsx  RoleCard.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/config/: env.ts
frontend/src/services/api/: articles.ts  index.ts
frontend/src/types/: article.ts  index.ts
mcp-server/: .env.example  README.md  pyproject.toml
mcp-server/src/mcpress/: config.py  server.py
mcp-server/src/mcpress/tools/: articles.py
supabase/: README.md
supabase/migrations/: 002_create_match_embeddings_function.sql
